--- a/welcome.htm
+++ b/welcome.htm
@@ -15,6 +15,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>포트폴리오</title>
     <link rel="stylesheet" href="./welcome.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+    />
+    <style>
+      .mySwiper {
+        height: 100%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+
+      .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 850px;
+      }
+
+      .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      @media screen and (max-width: 780px) {
+        .mySwiper {
+          width: 100%;
+        }
+      }
+      @media screen and (min-width: 781px) {
+        .mySwiper {
+          width: 150%;
+        }
+      }
+    </style>
   </head>
   <body>
     <div class="background"></div>
@@ -87,8 +126,30 @@
       <!-- <div class="world"><div class="poster"><figure class="poscon"><img src="./images/bg_falling.svg" alt=""></figure></div></div> -->
     </section>
     <div class="sectwrap">
-      <section id="sect1">
-          <div class="inner">
+        <section class="scroll" id="sect1">
+          
+        <lottie-player class="rocket lottie"
+          src="https://assets3.lottiefiles.com/packages/lf20_tb8ugi81.json"
+          background="transparent"
+          style="width: 30%; max-width: 280px;"
+          speed="0.7"
+          loop
+          autoplay
+        ></lottie-player>
+        <div class="inner">
+          <div class="desc">
+            <ul>
+              <li>일단 아무말이나해</li>
+              <li>일단 아무말이나해</li>
+              <li>일단 아무말이나해</li>
+              <li>일단 아무말이나해</li>
+            </ul>
+            <div class="btn-box">
+              <span class="btn prev">Prev</span>
+              <span class="btn next">Next</span>
+            </div>
+          </div>
+
           <div class="swiperContainer">
             <div class="swiperWrapper">
               <div class="swiperSlide on">
@@ -109,20 +170,80 @@
               </div>
             </div>
           </div>
-          <div class="btn-box">
-            <span class="btn prev">Prev</span>
-            <span class="btn next">Next</span>
+        </div>
+      </section>
+      <section class="scroll" id="sect2">
+        <lottie-player class="lottie planet" src="https://assets4.lottiefiles.com/private_files/lf30_rn8hog3p.json"  background="transparent"  speed="1.3"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+        <div class="inner">
+          <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">Slide 1</div>
+              <div class="swiper-slide">Slide 2</div>
+              <div class="swiper-slide">Slide 3</div>
+              <div class="swiper-slide">Slide 4</div>
+              <div class="swiper-slide">Slide 5</div>
+              <div class="swiper-slide">Slide 6</div>
+              <div class="swiper-slide">Slide 7</div>
+              <div class="swiper-slide">Slide 8</div>
+              <div class="swiper-slide">Slide 9</div>
+            </div>
+            <div class="swiper-pagination"></div>
           </div>
         </div>
       </section>
-      <section id="sect2">확인용</section>
-      <section id="sect3"></section>
-      <section id="sect4"></section>
-      <section id="sect5"></section>
-      <section id="sect6"></section>
+      <section class="scroll" id="sect3">
+        <div class="inner">
+          <ul class="graphic-menu">
+            <li><a href=".all"></a></li>
+            <li><a href=".photoshop"></a></li>
+            <li><a href=".illustration"></a></li>
+            <li><a href=".painting"></a></li>
+          </ul>
+          <div class="grid">
+            <div class="all photoshop"></div>
+            <div class="all photoshop"></div>
+            <div class="all photoshop"></div>
+            <div class="all illustration"></div>
+            <div class="all illustration"></div>
+            <div class="all illustration"></div>
+            <div class="all painting"></div>
+            <div class="all painting"></div>
+            <div class="all painting"></div>
+          </div>
+        </div>
+      </section>
+      <section class="scroll" id="sect4"></section>
     </div>
     <a href="#" class="main"><img src="./images/main-btn.svg" alt="" /></a>
+    
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="./script/jquery-3.6.3.min.js"></script>
+    <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.js"></script>
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script src="./script/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        slidesPerView: 1,
+        spaceBetween: 20,
+        centeredSlides: true,
+        freemode: true,
+        loop: true,
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
+        breakpoints: {
+          781: {
+            slidesPerView: 2,
+            spaceBetween: 20,
+          },
+          1201: {
+            slidesPerView: 3,
+            spaceBetween: 50,
+          },
+        },
+      });
+    </script>
   </body>
 </html>
